--- a/css/styles.css
+++ b/css/styles.css
@@ -44,3 +44,18 @@ address{
     margin:0px auto;
     padding: 20px 0px 20px 0px;
 }
+
+.carousel {
+    background:#512DA8;
+}
+
+.carousel-item {
+  height: 300px;
+}
+
+.carousel-item img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-height: 300px;
+}
