--- a/css/styles.scss
+++ b/css/styles.scss
@@ -32,6 +32,18 @@ $carousel-item-height: 300px;
     color:floralwhite;
 }
 
+.modal-header {
+     background-color: $background-dark;
+     color: floralwhite;
+   .btn-secondary {
+     color: floralwhite;
+   }
+}
+
+.modal-body {
+     background-color: $background-light;
+}
+
 address{
     font-size:80%;
     margin:0px;
